apps/client/src/app/pages/profile/profile.component.css
h1 {
	color: var(--primary-text-value);
	margin-top: 3.625rem;
}

h4 {
	color: var(--primary-text-label);
	width: 100%;
	text-align: left;
	display: block;
}

section {
	width: 100%;
	margin-top: 1.5rem;
}

.avatar {
	width: 5.5rem;
	aspect-ratio: 1;
	border-radius: 100%;
	margin-top: 0.5rem;
}

.star {
	margin-top: 0.5rem;
	height: 1.5rem;
}

.email {
	margin-top: 0.5rem;
	color: #878eaa;
}

.edit-profile-button {
	margin-top: 1rem;
}

.user-preferences {
	display: flex;
	gap: 1.25rem;
	list-style-type: none;
	margin-top: .625rem;
	color: var(--primary-text-value);
}

.user-preference-item {
	display: flex;
	align-items: center;
	gap: .5625rem;
}

.user-preference-item img {
	width: var(--icon-m);
}

.phone-number-container {
	display: flex;
	align-items: center;
	justify-content: space-between;
	margin-top: .25rem;
}

.phone-number-label-container {
	display: flex;
	align-items: center;
	justify-content: start;
	gap: .625rem;
	margin-top: 0.4rem;
}

.phone-number {
	color: var(--primary-text-value);
	font-weight: 700;
}

.phone-number-label {
	color: #878eaa;
}

.phone-number-icon {
	width: var(--icon-s);
	aspect-ratio: 1;
}

.list-container {
	display: flex;
	align-items: center;
	gap: 1rem;
	margin-top: .8125rem;
}

.chip-container {
	display: flex;
	align-items: center;
	background-color: #e7e1db;
	padding: .5rem .9375rem;
	border-radius: 1rem;
	gap: .125rem;
}

.chip-container p {
	color: var(--primary-text-value);
	text-wrap: nowrap;
}

.chip-container img {
	width: var(--icon-s);
}

.action-buttons-container {
	display: flex;
	flex-direction: column;
	gap: .625rem;
}

.add-button {
	height: 2.125rem;
	align-items: center;
}

